--- a/lesson-1-async-w-xhr/index.html
+++ b/lesson-1-async-w-xhr/index.html
@@ -2,18 +2,18 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Make Asynchronous Requests</title>
+    <title>Haciendo Solicitudes Asíncronas</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link href="../css/styles.css" rel="stylesheet">
 </head>
 <body>
 
     <header class="masthead">
-        <h1>What are you interested in today?</h1>
+        <h1>¿Qué te interesa hoy?</h1>
 
         <div class="site-container">
-            <form id="search-form" action="#">
-                <label for="search-keyword" class="visuallyhidden">What are you interested in today?</label>
+            <form id="search-form">
+                <label for="search-keyword" class="visuallyhidden">¿Qué buscamos?</label>
                 <input id="search-keyword" type="text" name="search-keyword" placeholder="e.g. Android" required>
                 <input id="submit-btn" type="submit" value="Submit">
             </form>
@@ -21,7 +21,7 @@
     </header>
 
     <div class="site-container">
-        <div id="response-container"></div>
+        <ul id="response-container"></ul>
     </div>
 
     <script src="app.js"></script>
